--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+fastapi = "^0.112.2"
+pg8000 = "^1.31.2"
+sqlmodel = "^0.0.21"
 
 
 [build-system]
