--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,11 @@ python = "^3.12"
 fastapi = "^0.112.2"
 pg8000 = "^1.31.2"
 sqlmodel = "^0.0.21"
+pydantic-settings = "^2.4.0"
+uvicorn = "^0.30.6"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
+asyncpg = "^0.29.0"
+pyjwt = "^2.9.0"
 
 
 [build-system]
