--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ uvicorn = "^0.30.6"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
 asyncpg = "^0.29.0"
 pyjwt = "^2.9.0"
+bcrypt = "^4.2.0"
 
 
 [build-system]
