--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,12 @@ sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
 asyncpg = "^0.29.0"
 pyjwt = "^2.9.0"
 bcrypt = "^4.2.0"
+pytest-mock = "^3.14.0"
+pytest = "^8.3.2"
+httpx = "^0.27.2"
+aiosqlite = "^0.20.0"
+pytest-asyncio = "^0.24.0"
+locust = "^2.31.4"
 
 
 [build-system]
