--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ httpx = "^0.27.2"
 aiosqlite = "^0.20.0"
 pytest-asyncio = "^0.24.0"
 locust = "^2.31.4"
+python-multipart = "^0.0.9"
+pydantic = {extras = ["email"], version = "^2.8.2"}
 
 
 [build-system]
